--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "engines":{
-    "node":"10.15.1",
-    "yarn":"1.13.0"
+  "engines": {
+    "node": "10.15.1",
+    "yarn": "1.13.0"
   },
   "scripts": {
-    "start":"node index.js"
+    "start": "node index.js",
+    "dev":"nodemon index.js"
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "2"
   }
 }
