--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev":"nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "license": "MIT",
   "dependencies": {
+    "cookie-session": "^1.3.3",
     "express": "^4.16.4",
+    "mongoose": "^5.4.20",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-google-oauth20": "2"
