--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "license": "MIT",
   "dependencies": {
@@ -23,6 +23,7 @@
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-google-oauth20": "2",
+    "passport-twitter": "^1.0.4",
     "stripe": "^6.28.0"
   }
 }
